--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Impleentação de estudos do https://www.tabnews.com.br do curso https://curso.dev",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "",
   "license": "MIT",
